[gd_scene load_steps=12 format=3 uid="uid://qjq33xvfin8d"]

[ext_resource type="Script" uid="uid://moqxk8y60xhx" path="res://Scripts/elevator.gd" id="1_25c2b"]
[ext_resource type="Material" uid="uid://cwo6egjcelvi0" path="res://Materials/black.tres" id="2_kiv01"]

[sub_resource type="BoxShape3D" id="BoxShape3D_25c2b"]
size = Vector3(2.6, 0.2, 2.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_ixo4o"]
size = Vector3(2.6, 2.25, 0.185)

[sub_resource type="BoxShape3D" id="BoxShape3D_kiv01"]
size = Vector3(0.2, 2.25, 0.0916382)

[sub_resource type="BoxShape3D" id="BoxShape3D_y28hi"]
size = Vector3(0.1, 2.25, 1.825)

[sub_resource type="Curve" id="Curve_7i85y"]
_limits = [-360.0, 360.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.492647, 28.3146), 0.0, 0.0, 0, 0, Vector2(0.882353, 311.461), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_06awd"]
curve = SubResource("Curve_7i85y")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jd6vs"]
angle_min = 1.07288e-05
angle_max = 314.5
angle_curve = SubResource("CurveTexture_06awd")
gravity = Vector3(0, 5, 0)
turbulence_enabled = true
turbulence_initial_displacement_min = 1.49012e-06
turbulence_initial_displacement_max = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rajhg"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0.470588, 0.168627, 1)
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_1gjip"]
material = SubResource("StandardMaterial3D_rajhg")

[node name="Elevator" type="CharacterBody3D" groups=["elevator"]]
motion_mode = 1
script = ExtResource("1_25c2b")

[node name="SmoothCameraController" type="Node3D" parent="."]
top_level = true

[node name="Camera3D" type="Camera3D" parent="SmoothCameraController"]
transform = Transform3D(1, 0, 0, 0, 0.978148, 0.207912, 0, -0.207912, 0.978148, 0, 1.55, 8)
current = true
fov = 40.0

[node name="Outer" type="CSGBox3D" parent="."]
size = Vector3(2.6, 2.65, 2.2)
material = ExtResource("2_kiv01")

[node name="Inner" type="CSGBox3D" parent="Outer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)
operation = 2
size = Vector3(2.2, 2.25, 2.025)
material = ExtResource("2_kiv01")

[node name="LeftDoor" type="CSGBox3D" parent="Outer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, -0.1, 0)
operation = 2
size = Vector3(0.2, 2.05, 1)
material = ExtResource("2_kiv01")

[node name="RightDoor" type="CSGBox3D" parent="Outer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, -0.1, 0)
operation = 2
size = Vector3(0.2, 2.05, 1)
material = ExtResource("2_kiv01")

[node name="CollisionBottom" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.225, 0)
shape = SubResource("BoxShape3D_25c2b")

[node name="CollisionTop" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.225, 0)
shape = SubResource("BoxShape3D_25c2b")

[node name="CollisionFront" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.007)
shape = SubResource("BoxShape3D_ixo4o")

[node name="CollisionBack" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.007)
shape = SubResource("BoxShape3D_ixo4o")

[node name="CollisionLeft1" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 0, 0.950122)
shape = SubResource("BoxShape3D_kiv01")

[node name="CollisionLeft2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 0, -0.865112)
shape = SubResource("BoxShape3D_kiv01")

[node name="CollisionRight1" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0, 0.848792)
shape = SubResource("BoxShape3D_kiv01")

[node name="CollisionRight2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0, -0.790155)
shape = SubResource("BoxShape3D_kiv01")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_y28hi")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.12509, 0)
light_energy = 4.0
shadow_enabled = true
spot_range = 3.0
spot_attenuation = 2.0
spot_angle = 40.0

[node name="AudioListener3D" type="AudioListener3D" parent="."]
current = true

[node name="OnFireStuff" type="Node3D" parent="."]

[node name="FireEffect" type="GPUParticles3D" parent="OnFireStuff"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.827073, 0)
amount = 15
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_jd6vs")
draw_pass_1 = SubResource("QuadMesh_1gjip")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
